<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_carte"
        android:title="@string/carte_titre"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_alerte"
        android:title="@string/alerte_djibril"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_options"
        android:title="@string/menu_options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource">
        <menu>
            <item
                android:id="@+id/menu_envoyer"
                android:title="@string/menu_envoyer"
                android:icon="@android:drawable/ic_menu_send"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_espece"
        android:title="@string/espece"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_animal"
        android:title="@string/animal"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

</menu>