<?xml version="1.0" encoding="utf-8"?>
<!-- à utiliser lorsque l'ecran est debordé
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" > -->
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F000">

    <TextView
        android:id="@+id/tvSousTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accueil_soustitre"
        android:background="#F00"
        android:textColor="#F000"
        android:height="100px"
        android:padding="2dp"
        />
        <!-- android:background="#F00"
        android:textColor="#F000"
        android:height="50px"
        android:padding="20dp"
        android:text="@string/accueil_soustitre" />  -->

    <TextView
        android:id="@+id/tvInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accueil_infos" />

    <TextView
        android:id="@+id/tvNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <Button
                android:id="@+id/btCarte"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/carte_titre" />

            <Button
                android:id="@+id/btAlerte"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/alerte_djibril" />
    </LinearLayout>

    <Button
        android:id="@+id/bAnnuaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/annuaire" />
</LinearLayout>
<!--</ScrollView> -->